      (John R. Doe)".
    - Instead of replacing only "3" with "_3" in tags, prefix all tags that
      begin with a decimal digit with an underscore.
    - Added the "generator" attribute, whose value is "dctrl2xml/$VERSION", to
      the topmost element of dctrl2xml's XML output.
    - Parse also the file list of the Conffiles field.
  * debian/rules: Added test target that stress tests dctrl2xml with the dpkg
    available file and the output of "apt-cache dumpavail".

 -- Frank S. Thomas <fst@debian.org>  Fri, 28 Dec 2007 00:58:42 +0100

dctrl2xml (0.8) unstable; urgency=low

  * dctrl2xml:
    - Print dctrl2xml's version number if the --version option is given.
    - Convert RFC 2822 dates in Date fields to a ISO 8601 representation and
      save them in <date_iso8601> elements.
    - Enabled Debtags parsing again, it was disabled in 0.7 due to errors
      when parsing "compressed tags". This has been corrected.
  * doc/dctrl2xml.xml: Added reference to deb-control(5) to the SEE ALSO
    section.
  * stylesheets/pkglist{,compact}.xsl: Reformatted and added example usage of
    dctrl2xml and the stylesheets with a Packages file.

 -- Frank S. Thomas <fst@debian.org>  Sat, 22 Dec 2007 17:41:24 +0100

dctrl2xml (0.7) unstable; urgency=low

  * Initial upload to Debian. (closes: #456597)
  * dctrl2xml:
    - DebianControlParser.parse_package_string() has been very much simplified
      by using Deb822 from the debian_bundle.deb822 module. This requires a
      dependency on the python-debian package.
    - Do not parse the long description for upstream author or homepage. The
      Homepage field is a proper control field since dpkg 1.14.6 and the
      Author pseudo field in the long description is not widely used.
    - Added Breaks to the list of package relations.
    - Improved the parsing of the Description and Files fields.
    - Instead of reading entire files, read them line by line and dump the XML