@@ -37,11 +37,11 @@ __version__ = '0.9'
 class DebianControlParser:
 
     def __init__(self):
-        self.contacts = ['maintainer', 'changed-by', 'uploaders']
-        self.relations = ['depends', 'pre-depends', 'suggests', 'recommends',
-            'conflicts', 'provides', 'replaces', 'enhances', 'build-depends',
-            'build-depends-indep', 'build-conflicts', 'build-conflicts-indep',
-            'breaks']
+        self.contacts = ['changed-by', 'maintainer', 'uploaders']
+        self.relations = ['breaks', 'build-conflicts', 'build-conflicts-indep',
+            'build-depends', 'build-depends-indep', 'conflicts', 'depends',
+            'enhances', 'pre-depends', 'provides', 'recommends', 'replaces',
+            'suggests']
 
 
     def parse_package_string(self, pkg_str):
@@ -95,10 +95,16 @@ class DebianControlParser:
 
 
     def parse_contacts(self, contacts_str):
+        """Parse contacts in the Maintainer, Uploaders, and Changed-By
+        fields."""
         contacts = []
 
         split_re = r'\s*((.+?)\s+?<(.+?)>,?|(.+?)\s+?\((.+?)\),?)'
         s = re.split(split_re, contacts_str)
+
+        if len(s) < 6:
+            self._err('could not parse contact: ' + contacts_str)
+            return contacts_str
 
         for contact in [s[x:x+6] for x in range(0, len(s), 6)]:
             if len(contact) != 6:
@@ -141,6 +147,7 @@ class DebianControlParser:
 
 
     def parse_conffilelist(self, conffiles_str):
+        """Parse the list of conffiles in the Conffiles field."""
         conffiles = []
 
         for line in conffiles_str.split('\n'):
@@ -148,6 +155,8 @@ class DebianControlParser:
             if m:
                 cf = {'conffile': {'name': m.group(1), 'md5sum': m.group(2)}}
                 conffiles.append(cf)
+            elif line.strip() != '':
+                self._err('could not parse Conffiles line: ' + line)
 
         return conffiles
 
@@ -198,6 +207,8 @@ class DebianControlParser:
 
 
     def parse_debtags(self, debtags_str):
+        """Parse the field data of the Tag field, which contains the package's
+        Debtags."""
         debtags = {}
 
         for tag_str in debtags_str.split(', '):
@@ -236,6 +247,12 @@ class DebianControlParser:
         iso8601_date_str = time.strftime('%Y-%m-%dT%H:%M', date) + zone_str
 
         return iso8601_date_str
+
+
+    def _err(self, error_msg):
+        """Print the error message 'error_msg' to stderr."""
+        print >> sys.stderr, 'Error:', error_msg
+        return
 
 
 class DebianControl2XMLConverter:
